More fixes to link in hero on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -347,7 +347,9 @@ nav a.btn.menu-btn.btn-base li.nav-item strong {
         padding-left:0;
         margin-top:15px;
     }
-
+    p.lead {
+        text-align:center;
+    }
     .container,
     .container-fluid,
     .row.featurette {
